--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
       - VERSION=latest
     volumes:
       - ./config:/config
+      bind:
+        create_host_path: true
       - /nfs/plex_share:/data/media
     devices:
 # intel Hardware accelerator
